# Double-to-one

./: .gitignore  CMakeLists.txt  README.md  double_to_one.7z  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old  sh-keygen -t rsa -C yz935310@gmail.com
bootloader_components/my_boot_hooks/: CMakeLists.txt  hooks.c
components/UI/: CMakeLists.txt  LEBREW.c  actions.c  actions.h  bat20Percent.c  bat40Percent.c  bat5Percent.c  bat60Percent.c  bat80Percent.c  bat_change.c  images.h  screens.c  screens.h  ui.c  ui.h  ui_font_bold_12.c  ui_font_bold_14.c  ui_font_bold_20.c  variant.cmake
components/UI/legacy/: CMakeLists.txt  bat20Percent.c  bat5Percent.c  bat60Percent.c  fonts.h  images.c  images.h  screens.c  screens.h  styles.c  styles.h  ui.c  ui.h  ui_font_bold_10.c  ui_font_bold_16.c  ui_font_bold_20.c  ui_font_bold_40.c  ui_font_bold_60.c  ui_image_bat.c  ui_image_recharge.c  ui_image_wifi.c
components/UI/new/: .eez-project-build  CMakeLists.txt  actions.c  actions.h  fonts.h  images.c  images.h  screens.c  screens.h  styles.c  styles.h  ui.c  ui.h  ui_font_bold_10.c  ui_font_bold_12.c  ui_font_bold_14.c  ui_font_bold_16.c  ui_font_bold_20.c  ui_font_bold_24.c  ui_font_bold_28.c  ui_font_bold_40.c  ui_font_bold_60.c  ui_font_regular_14.c  ui_font_regular_16.c  ui_image_100.c  ui_image_a.c  ui_image_a_1.c  ui_image_a_2.c  ui_image_about.c  ui_image_arrows.c  ui_image_back.c  ui_image_bat.c  ui_image_bat_2.c  ui_image_brightness_1.c  ui_image_brightness_2.c  ui_image_brightness_3.c  ui_image_chinese.c  ui_image_cn.c  ui_image_douzi_1.c  ui_image_drycherry.c  (+21 more)
components/esp_lcd_gc9307/: CMakeLists.txt  esp_lcd_gc9307.c
components/esp_lcd_gc9307/include/: esp_lcd_gc9307.h
components/esp_lcd_st7789v/: CMakeLists.txt  esp_lcd_st7789v.c
components/esp_lcd_st7789v/include/: esp_lcd_st7789v.h
components/espressif__button/: CMakeLists.txt  iot_button.c
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
main/inc/: GD60914.h  MDC04.h  MDC04IIC.h  MDC04app.h  TF_Luna.h  adc_filter.h  algorithms.h  cs1237.h  sht4x.h  user_bat.h  user_ble.h  user_hal.h  user_key.h  user_sensor.h  user_uart.h
main/src/: GD60914.c  GD60914_stub.c  MDC04.c  MDC04IIC.c  MDC04app.c  TF_Luna.c  adc_filter.c  algorithms.c  cs1237.c  sht4x.c  user_bat.c  user_ble.c  user_hal.c  user_key.c  user_sensor.c  user_uart.c
